Task instance Java/146